tests/baselines/reference/jsFileCompilationNonNullAssertion.errors.txt
error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
/src/a.js(1,1): error TS8013: Non-null assertions can only be used in TypeScript files.


!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== /src/a.js (1 errors) ====
    0!
    ~~
!!! error TS8013: Non-null assertions can only be used in TypeScript files.
    